Added details for .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3389,6 +3389,16 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "RHYTHM2405",
+      "name": "Rhythm",
+      "avatar_url": "https://avatars.githubusercontent.com/u/120374124?v=4",
+      "profile": "https://github.com/RHYTHM2405",
+      "contributions": [
+        "doc",
+        "code"
+      ]
     }
   ]
 }
