--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3239,7 +3239,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/PranavBhatP",
       "profile" :"https://github.com/PranavBhatP",
       "contributions": [
-        "doc"
+        "doc",
+        "code"
       ]
     },
     {
