--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3261,7 +3261,7 @@
     },
     {
       "login": "TanviPooranmal",
-      "name": "Tanvi Pooranmal Meena"
+      "name": "Tanvi Pooranmal Meena",
       "avatar_url": "https://avatars.githubusercontent.com/TanviPooranmal",
       "profile": "https://github.com/TanviPooranmal",
       "contributions": [
@@ -3331,6 +3331,17 @@
       "profile": "https://github.com/b9junkers",
       "contributions": [
         "doc"
+      ]
+    },
+    {
+      "login": "Utkarsh-Aggarwal",
+      "name": "Utkarsh Aggarwal",
+      "avatar_url": "https://avatars.githubusercontent.com/Utkarsh-Aggarwal",
+      "profile": "https://github.com/Utkarsh-Aggarwal",
+      "contributions": [
+        "code",
+        "doc",
+        "bug"
       ]
     },
     {
