--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3301,8 +3301,8 @@
     {
       "login": "tanvincible",
       "name": "Tanvi Pooranmal Meena",
-      "avatar_url": "https://avatars.githubusercontent.com/TanviPooranmal",
-      "profile": "https://github.com/TanviPooranmal",
+      "avatar_url": "https://avatars.githubusercontent.com/tanvincible",
+      "profile": "https://github.com/tanvincible",
       "contributions": [
         "code",
         "doc"
