--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3399,6 +3399,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "AffanBinFaisal",
+      "name": "Affan Bin Faisal",
+      "avatar_url": "https://avatars.githubusercontent.com/u/115661779?v=4",
+      "profile": "https://github.com/AffanBinFaisal",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
