--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3257,8 +3257,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/Sohaib-Ahmed21",
       "profile": "https://github.com/Sohaib-Ahmed21",
       "contributions": [
-        "code",
-        "bug"
+        "bug",
+        "code"
       ]
     },
     {
