--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,6 +104,7 @@ all_extras = [
   'scikit_posthocs>=0.6.5; python_version < "3.13"',
   'seaborn>=0.11; python_version < "3.13"',
   'seasonal; python_version < "3.13"',
+  'simdkalman; python_version < "3.13"',
   'skforecast<0.15,>=0.12.1; python_version < "3.13"',
   "skpro>=2,<2.10.0",
   'statsforecast<2.1.0,>=1.0.0; python_version < "3.13"',
