feat: Added LHoelper to contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3410,6 +3410,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "LHoelper",
+      "name": "Luca Hölper",
+      "avatar_url": "https://avatars.githubusercontent.com/LHoelper",
+      "profile": "https://github.com/LHoelper",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
