--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2358,6 +2358,15 @@
       ]
     },
     {
+      "login": "sky0walker99",
+      "name": "Muhammed Haroon",
+      "avatar_url": "https://avatars.githubusercontent.com/u/106879583?s=96&v=4",
+      "profile": "https://github.com/sky0walker99",
+      "contributions": [
+        "doc"
+      ]
+    }
+    {
       "login": "MCRE-BE",
       "name": "Mathias Creemers",
       "avatar_url": "https://avatars.githubusercontent.com/u/99316631",
