[ENH] update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3235,11 +3235,13 @@
     },
     {
       "login": "PranavBhatP",
-      "name": "PranavBhatP",
+      "name": "Pranav Bhat",
       "avatar_url": "https://avatars.githubusercontent.com/PranavBhatP",
       "profile" :"https://github.com/PranavBhatP",
       "contributions": [
-        "doc"
+        "doc",
+        "code",
+        "test"
       ]
     },
     {
