[DOC] Added example  for 'AlignerNaive' and 'AlignerLuckyDtw'  (#7795)
#### Reference Issues/PRs

This PR adds usage examples for AlignerNaive and AlignerLuckyDtw
See Issue: #4264 

#### What does this implement/fix? Explain your changes.

- Added an example for AlignerNaive.
- Provided an example for AlignerLuckyDtw, including alignment and distance retrieval

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3412,6 +3412,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "sky0walker99",
+      "name": "Muhammed Haroon",
+      "avatar_url": "https://avatars.githubusercontent.com/u/106879583?s=96&v=4",
+      "profile": "https://github.com/sky0walker99",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
