Add name to .all-contributorsrc, rather than CONTRIBUTORS.md

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3421,6 +3421,17 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "wilsbj",
+      "name": "Brendan Wilson",
+      "avatar_url": "https://avatars.githubusercontent.com/u/16727867?v=4",
+      "profile": "https://github.com/wilsbj",
+      "contributions": [
+        "bug",
+        "code",
+        "maintenance"
+      ]
     }
   ]
 }
