[MNT] remove `tj-actions` (#7989)
Removes the compromised `tj-actions` GH action and replaces it by custom code.

See https://github.com/sktime/sktime/issues/7988

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,18 +19,40 @@ jobs:
     steps:
       - name: repository checkout step
         uses: actions/checkout@v4
+
       - name: python environment step
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: install pre-commit
         run: python3 -m pip install pre-commit
-      - id: changed-files
-        name: identify modified files
-        uses: tj-actions/changed-files@v45
-      - name: run pre-commit hooks on modified files
-        run: pre-commit run --color always --files ${{ steps.changed-files.outputs.all_changed_files }} --show-diff-on-failure
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get changed files
+        id: changed-files
+        run: |
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | tr '\n' ' ')
+          echo "CHANGED_FILES=${CHANGED_FILES}" >> $GITHUB_ENV
+
+      - name: Print changed files
+        run: |
+          echo "Changed files: $CHANGED_FILES"
+
+      - name: Run pre-commit on changed files
+        run: |
+          if [ -n "$CHANGED_FILES" ]; then
+            pre-commit run --color always --files $CHANGED_FILES --show-diff-on-failure
+          else
+            echo "No changed files to check."
+          fi
+
       - name: check missing __init__ files
+
         run: build_tools/fail_on_missing_init_files.sh
         shell: bash
 
