--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -109,3 +109,5 @@ jobs:
 
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: wheelhouse/
