[MNT] move release to trusted publishers (#7990)
Moves the release to trusted publishers.

All secrets have been removed from the repo.

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -98,6 +98,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_wheels,test_unix_wheels,test_windows_wheels]
 
+    permissions:
+      id-token: write
+
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -107,5 +110,4 @@ jobs:
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
           packages-dir: wheelhouse/
