update utils.rst to add plot_windows

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3421,6 +3421,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Prahitha",
+      "name": "Prahitha Movva",
+      "avatar_url": "https://avatars.githubusercontent.com/u/44160152?s=400&v=4",
+      "profile": "https://github.com/Prahitha",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
