added myself to list of contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3421,6 +3421,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "swetha3456",
+      "name": "Swetha Murali",
+      "avatar_url": "https://avatars.githubusercontent.com/u/116883043?v=4",
+      "profile": "https://github.com/swetha3456",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
