--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3106,7 +3106,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/118207011?v=4",
       "profile": "https://github.com/vedantag17",
       "contributions": [
-        "doc"
+        "doc",
+        "code"
       ]
     },
     {
