[ENH] `HierarchyEnsembleForecaster` parallelization backends (#7954)
#### Reference Issues/PRs

Resolves #7947 

#### What does this implement/fix? Explain your changes.

Replaces the for-loops in both fit and predict with the sktime
parallelize function to allow for parallelization

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3415,6 +3415,15 @@
       ]
     },
     {
+      "login": "LHoelper",
+      "name": "Luca Hölper",
+      "avatar_url": "https://avatars.githubusercontent.com/LHoelper",
+      "profile": "https://github.com/LHoelper",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "sky0walker99",
       "name": "Muhammed Haroon",
       "avatar_url": "https://avatars.githubusercontent.com/u/106879583?s=96&v=4",
