Add simdkalman-based series transformer KalmanFilterTransformerSIMD and panel transformer SIMDKalmanSmoother

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,6 +104,7 @@ all_extras = [
   'scikit_posthocs>=0.6.5; python_version < "3.13"',
   'seaborn>=0.11; python_version < "3.13"',
   'seasonal; python_version < "3.13"',
+  'simdkalman',
   'skforecast<0.15,>=0.12.1; python_version < "3.13"',
   "skpro>=2,<2.10.0",
   'statsforecast<2.1.0,>=1.0.0; python_version < "3.13"',
@@ -146,6 +147,7 @@ all_extras_pandas2 = [
   'scikit_posthocs>=0.6.5; python_version < "3.13"',
   'seaborn>=0.11; python_version < "3.13"',
   'seasonal; python_version < "3.13"',
+  'simdkalman',
   'skforecast<0.15,>=0.12.1; python_version < "3.13"',
   'skpro>=2,<2.10.0',
   'statsforecast<2.1.0,>=1.0.0; python_version < "3.13"',
@@ -227,6 +229,7 @@ transformations = [
   'mne>=1.5,<1.9; python_version < "3.13"',
   'numba<0.62,>=0.53; python_version < "3.13"',
   'pycatch22>=0.4,<0.4.6; python_version < "3.13"',
+  'simdkalman',
   'statsmodels<0.15,>=0.12.1; python_version < "3.13"',
   'stumpy<1.13,>=1.5.1; python_version < "3.12"',
   'temporian<0.9.0,>=0.7.0,!=0.8.0; python_version < "3.12" and sys_platform != "win32" and platform_machine != "aarch64"' ,
