--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,6 +144,7 @@ all_extras_pandas2 = [
   'prophet>=1.1; python_version < "3.12"',
   'pycatch22<0.4.6; python_version < "3.13"',
   'pyod>=0.8; python_version < "3.11"',
+  'ray >=2.40.0',
   'scikit_posthocs>=0.6.5; python_version < "3.13"',
   'seaborn>=0.11; python_version < "3.13"',
   'seasonal; python_version < "3.13"',
