--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3453,6 +3453,16 @@
       ]
     },
     {
+      "login": "LorchZachery",
+      "name": "Zachery Lorch",
+      "avatar_url": "https://avatars.githubusercontent.com/u/54079406?v=4",
+      "profile": "https://github.com/LorchZachery",
+      "contributions": [
+        "bug",
+        "code"
+      ]
+    },
+    {
       "login": "danferns",
       "name": "Daniel Fernandes",
       "avatar_url": "https://avatars.githubusercontent.com/u/57069381?v=4",
