&LorchZachery [BUG] Fix VMD odd length data returns even length decomposition (#8094)
#### Reference Issues/PRs
Fixes #6602 

#### What does this implement/fix? Explain your changes.
- The VMD module would discard the last sample when given an odd length
sequence.
- The math has been updated to handle odd length sequences based on
[this
comment](https://github.com/sktime/sktime/issues/6602#issuecomment-2168141677).
Now the VMD module handles odd length sequences properly.
- VMD transformer used the hack of duplicating the last sample to
achieve an even length sequence, this is no longer necessary and has been removed.
- A test to check the preservation of odd / even sequence length has been added.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3451,6 +3451,25 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "LorchZachery",
+      "name": "Zachery Lorch",
+      "avatar_url": "https://avatars.githubusercontent.com/u/54079406?v=4",
+      "profile": "https://github.com/LorchZachery",
+      "contributions": [
+        "bug",
+        "code"
+      ]
+    },
+    {
+      "login": "danferns",
+      "name": "Daniel Fernandes",
+      "avatar_url": "https://avatars.githubusercontent.com/u/57069381?v=4",
+      "profile": "https://github.com/danferns",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
