--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3444,6 +3444,17 @@
       ]
     },
     {
+      "login": "oseiskar",
+      "name": "Otto Seiskari",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1812432?v=4",
+      "profile": "https://github.com/oseiskar",
+      "contributions": [
+        "code",
+        "doc",
+        "test"
+      ]
+    },
+    {
       "login": "tapyu",
       "name": "Rubem Pacelli",
       "avatar_url": "https://avatars.githubusercontent.com/u/22801918?v=4",
