Fixes: #8120 See also #8121
Fixed by correctly adjusting the `window_size` parameter handling in `AlignerDTW` and `AlignerDTWfromDist` classes.

The issue occurred when using `window_type='sakoechiba'` without properly passing the required `window_size` parameter to the underlying dtw-python package, resulting in `TypeError: sakoeChibaWindow() missing 1 required positional argument: 'window_size'`.

Changes:

- Created `window_size` parameter to pass parameters to `dtw()` function
- Added proper handling to include `window_size` parameter when needed
- Updated documentation to make `window_size` requirement clear
- Fixed examples to demonstrate correct usage with Sakoe-Chiba windowing

This ensures the advanced example in the documentation now works

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3481,6 +3481,17 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "OmBiradar",
+      "name": "Om Biradar",
+      "avatar_url": "https://avatars.githubusercontent.com/OmBiradar",
+      "profile": "https://github.com/OmBiradar",
+      "contributions": [
+        "code",
+        "bug",
+        "doc"
+      ]
     }
   ]
 }
