[DOC] Update various docstrings for ray parallel backend

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3420,7 +3420,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/LHoelper",
       "profile": "https://github.com/LHoelper",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
