Added Mujeeb4 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -42,6 +42,16 @@
       ]
     },
     {
+      "login": "mujeeb4",
+      "name": "Muhammad Mujeeb",
+      "avatar_url": "https://avatars.githubusercontent.com/u/70962107?v=4",
+      "profile": "https://github.com/Mujeeb4",
+      "contributions": [
+        "code",
+        "enhancement"
+      ]
+    },
+    {
       "login": "sajaysurya",
       "name": "Sajaysurya Ganesh",
       "avatar_url": "https://avatars2.githubusercontent.com/u/25329624?v=4",
