--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ all_extras = [
   'pycatch22<0.4.6; python_version < "3.13"',
   'pyod>=0.8; python_version < "3.11"',
   "pyts<0.14.0; python_version < '3.12'",
+  'ray >=2.40.0; python_version < "3.13"',
   'scikit-optimize; python_version < "3.13"',
   'scikit_posthocs>=0.6.5; python_version < "3.13"',
   'seaborn>=0.11; python_version < "3.13"',
@@ -144,6 +145,7 @@ all_extras_pandas2 = [
   'prophet>=1.1; python_version < "3.12"',
   'pycatch22<0.4.6; python_version < "3.13"',
   'pyod>=0.8; python_version < "3.11"',
+  'ray >=2.40.0; python_version < "3.13"',
   'scikit_posthocs>=0.6.5; python_version < "3.13"',
   'seaborn>=0.11; python_version < "3.13"',
   'seasonal; python_version < "3.13"',
