--- a/pyproject.toml
+++ b/pyproject.toml
@@ -295,7 +295,7 @@ dl = [
   'neuralforecast<1.8.0,>=1.6.4; python_version < "3.11"',
   'peft>=0.10.0,<0.14.0; python_version < "3.12"',
   'tensorflow<2.20,>=2; python_version < "3.13"',
-  "torch; not (sys_platform == \"darwin\" and python_version == \"3.13\")"
+  "torch; not (sys_platform == \"darwin\" and python_version == \"3.13\")",
   'transformers[torch]<4.41.0; python_version < "3.12"',
   'pykan>=0.2.1,<0.2.9; python_version > "3.9.7"',
   "pytorch-forecasting>=1.0.0,<1.4.0; not (sys_platform == \"darwin\" and python_version == \"3.13\")",
