[MNT] prevent `torch` installation on `python 3.13` and macos (#8143)
This PR prevents `torch` installation on `python 3.13` and macos, which
is not officially supported and leads to failed install.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -295,10 +295,10 @@ dl = [
   'neuralforecast<1.8.0,>=1.6.4; python_version < "3.11"',
   'peft>=0.10.0,<0.14.0; python_version < "3.12"',
   'tensorflow<2.20,>=2; python_version < "3.13"',
-  'torch; python_version < "3.12"',
+  "torch; (sys_platform != 'darwin' or python_version != '3.13')",
   'transformers[torch]<4.41.0; python_version < "3.12"',
   'pykan>=0.2.1,<0.2.9; python_version > "3.9.7"',
-  'pytorch-forecasting>=1.0.0,<1.4.0',
+  "pytorch-forecasting>=1.0.0,<1.4.0; (sys_platform != 'darwin' or python_version != '3.13')",
   'lightning>=2.0; python_version < "3.12"',
   'gluonts>=0.14.3; python_version < "3.12"',
   'einops>0.7.0; python_version < "3.12"',
