Add musaqlain to all-contributorsrc with code and test badge

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3351,6 +3351,16 @@
       ]
     },
     {
+      "login": "musaqlain",
+      "name": "Muhammad Saqlain",
+      "avatar_url": "https://avatars.githubusercontent.com/u/77551019?v=4",
+      "profile": "https://github.com/musaqlain",
+      "contributions": [
+        "code",
+        "test"
+      ]
+    },
+    {
       "login": "gavinkatz001",
       "name": "Gavin Katz",
       "avatar_url": "https://avatars.githubusercontent.com/u/124807974?v=4",
