--- a/pyproject.toml
+++ b/pyproject.toml
@@ -446,3 +446,18 @@ allowed-confusables=["σ"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
+
+[tool.numpydoc_validation]
+checks = [ # same as in docs/source/conf.py
+    "all",
+    "SA04",  # Missing description for See Also "{reference_name}" reference
+    "EX01",  # No examples section found
+    "SA01",  # See Also section not found
+    "YD01",  # No Yields section found
+    "ES01",  # No extended summary found
+    "GL01",  # Docstring text (summary) should start in the line immediately ...
+    "PR08",  # Parameter "{param_name}" description should start with a capital letter
+    "PR09",  # Parameter "{param_name}" description should finish with "."
+    "RT05",  # Return value description should finish with "."
+    "RT03",  # Return value has no description
+]
