fix ruff in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,93 +76,93 @@ dependencies = [
 # or 'pip install sktime[all_extras_pandas2]', to install only pandas 2 compatible deps
 #
 all_extras = [
-  'arch>=5.6,<7.1.0; python_version < '3.13'',
+  'arch>=5.6,<7.1.0; python_version < "3.13"',
   'autots<0.7,>=0.6.1',
-  'cloudpickle; python_version < '3.13'',
-  'dash!=2.9.0; python_version < '3.13'',
-  'dask<2025.2.1,>2024.8.2; extra == 'dataframe' and python_version < '3.13'',
-  'dtaidistance<2.4; python_version < '3.13'',
-  'dtw-python; python_version < '3.13'',
-  'esig==0.9.7; python_version < '3.10'',
-  'filterpy>=1.4.5; python_version < '3.11'',
-  'gluonts>=0.9; python_version < '3.13'',
-  'h5py; python_version < '3.12'',
-  'hmmlearn>=0.2.7; python_version < '3.11'',
-  'holidays; python_version < '3.13'',
-  'keras-self-attention; python_version < '3.11'',
-  'matplotlib!=3.9.1,>=3.3.2; python_version < '3.13'',
-  'mne; python_version < '3.13'',
-  'numba<0.62,>=0.53; python_version < '3.13'',
+  'cloudpickle; python_version < "3.13"',
+  'dash!=2.9.0; python_version < "3.13"',
+  'dask<2025.2.1,>2024.8.2; extra == "dataframe" and python_version < "3.13"',
+  'dtaidistance<2.4; python_version < "3.13"',
+  'dtw-python; python_version < "3.13"',
+  'esig==0.9.7; python_version < "3.10"',
+  'filterpy>=1.4.5; python_version < "3.11"',
+  'gluonts>=0.9; python_version < "3.13"',
+  'h5py; python_version < "3.12"',
+  'hmmlearn>=0.2.7; python_version < "3.11"',
+  'holidays; python_version < "3.13"',
+  'keras-self-attention; python_version < "3.11"',
+  'matplotlib!=3.9.1,>=3.3.2; python_version < "3.13"',
+  'mne; python_version < "3.13"',
+  'numba<0.62,>=0.53; python_version < "3.13"',
   'optuna<4.3',
-  'pmdarima!=1.8.1,<3.0.0,>=1.8; python_version < '3.12'',
-  'polars[pandas]>=0.20,<2.0; python_version < '3.13'',
-  'prophet>=1.1; python_version < '3.12'',
-  'pycatch22<0.4.6; python_version < '3.13'',
-  'pyod>=0.8; python_version < '3.11'',
-  'pyts<0.14.0; python_version < '3.12'',
-  'ray >=2.40.0; python_version < '3.13'',
-  'scikit-optimize; python_version < '3.13'',
-  'scikit_posthocs>=0.6.5; python_version < '3.13'',
-  'seaborn>=0.11; python_version < '3.13'',
-  'seasonal; python_version < '3.13'',
+  'pmdarima!=1.8.1,<3.0.0,>=1.8; python_version < "3.12"',
+  'polars[pandas]>=0.20,<2.0; python_version < "3.13"',
+  'prophet>=1.1; python_version < "3.12"',
+  'pycatch22<0.4.6; python_version < "3.13"',
+  'pyod>=0.8; python_version < "3.11"',
+  'pyts<0.14.0; python_version < "3.12"',
+  'ray >=2.40.0; python_version < "3.13"',
+  'scikit-optimize; python_version < "3.13"',
+  'scikit_posthocs>=0.6.5; python_version < "3.13"',
+  'seaborn>=0.11; python_version < "3.13"',
+  'seasonal; python_version < "3.13"',
   'simdkalman',
-  'skforecast<0.15,>=0.12.1; python_version < '3.13'',
+  'skforecast<0.15,>=0.12.1; python_version < "3.13"',
   'skpro>=2,<2.10.0',
-  'statsforecast<2.1.0,>=1.0.0; python_version < '3.13'',
-  'statsmodels>=0.12.1; python_version < '3.13'',
-  'stumpy>=1.5.1; python_version < '3.11'',
-  'tbats>=1.1; python_version < '3.12'',
-  'temporian<0.9.0,>=0.7.0,!=0.8.0; python_version < '3.12' and sys_platform != 'win32' and platform_machine != 'aarch64'' ,
-  'tensorflow<2.20,>=2; python_version < '3.13'',
-  'tsfresh>=0.17; python_version < '3.12'',
-  'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < '3.11'',
-  'u8darts>=0.29.0,<0.32.0; python_version < '3.13'',
-  'xarray; python_version < '3.13'',
+  'statsforecast<2.1.0,>=1.0.0; python_version < "3.13"',
+  'statsmodels>=0.12.1; python_version < "3.13"',
+  'stumpy>=1.5.1; python_version < "3.11"',
+  'tbats>=1.1; python_version < "3.12"',
+  'temporian<0.9.0,>=0.7.0,!=0.8.0; python_version < "3.12" and sys_platform != "win32" and platform_machine != "aarch64"',
+  'tensorflow<2.20,>=2; python_version < "3.13"',
+  'tsfresh>=0.17; python_version < "3.12"',
+  'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < "3.11"',
+  'u8darts>=0.29.0,<0.32.0; python_version < "3.13"',
+  'xarray; python_version < "3.13"',
 ]
 
 # all soft dependencies compatible with pandas 2
 all_extras_pandas2 = [
-  'arch>=5.6,<7.1.0; python_version < '3.13'',
-  'autots<0.7,>=0.6.1; python_version < '3.13'',
-  'cloudpickle; python_version < '3.13'',
-  'dash!=2.9.0; python_version < '3.13'',
-  'dask<2025.2.1,>2024.8.2; extra == 'dataframe' and python_version < '3.13'',
-  'dtaidistance<2.4; python_version < '3.13'',
-  'dtw-python; python_version < '3.13'',
-  'esig==0.9.7; python_version < '3.10'',
-  'filterpy>=1.4.5; python_version < '3.11'',
-  'gluonts>=0.9; python_version < '3.13'',
-  'h5py; python_version < '3.12'',
-  'hmmlearn>=0.2.7; python_version < '3.11'',
-  'holidays; python_version < '3.13'',
-  'keras-self-attention; python_version < '3.11'',
-  'matplotlib!=3.9.1,>=3.3.2; python_version < '3.13'',
-  'mne; python_version < '3.13'',
-  'numba<0.62,>=0.53; python_version < '3.13'',
+  'arch>=5.6,<7.1.0; python_version < "3.13"',
+  'autots<0.7,>=0.6.1; python_version < "3.13"',
+  'cloudpickle; python_version < "3.13"',
+  'dash!=2.9.0; python_version < "3.13"',
+  'dask<2025.2.1,>2024.8.2; extra == "dataframe" and python_version < "3.13"',
+  'dtaidistance<2.4; python_version < "3.13"',
+  'dtw-python; python_version < "3.13"',
+  'esig==0.9.7; python_version < "3.10"',
+  'filterpy>=1.4.5; python_version < "3.11"',
+  'gluonts>=0.9; python_version < "3.13"',
+  'h5py; python_version < "3.12"',
+  'hmmlearn>=0.2.7; python_version < "3.11"',
+  'holidays; python_version < "3.13"',
+  'keras-self-attention; python_version < "3.11"',
+  'matplotlib!=3.9.1,>=3.3.2; python_version < "3.13"',
+  'mne; python_version < "3.13"',
+  'numba<0.62,>=0.53; python_version < "3.13"',
   'optuna<4.3',
-  'pmdarima!=1.8.1,<3.0.0,>=1.8; python_version < '3.12'',
-  'polars[pandas]>=0.20,<2.0; python_version < '3.13'',
-  'prophet>=1.1; python_version < '3.12'',
-  'pycatch22<0.4.6; python_version < '3.13'',
-  'pyod>=0.8; python_version < '3.11'',
-  'ray >=2.40.0; python_version < '3.13'',
-  'scikit_posthocs>=0.6.5; python_version < '3.13'',
-  'seaborn>=0.11; python_version < '3.13'',
-  'seasonal; python_version < '3.13'',
+  'pmdarima!=1.8.1,<3.0.0,>=1.8; python_version < "3.12"',
+  'polars[pandas]>=0.20,<2.0; python_version < "3.13"',
+  'prophet>=1.1; python_version < "3.12"',
+  'pycatch22<0.4.6; python_version < "3.13"',
+  'pyod>=0.8; python_version < "3.11"',
+  'ray >=2.40.0; python_version < "3.13"',
+  'scikit_posthocs>=0.6.5; python_version < "3.13"',
+  'seaborn>=0.11; python_version < "3.13"',
+  'seasonal; python_version < "3.13"',
   'simdkalman',
-  'skforecast<0.15,>=0.12.1; python_version < '3.13'',
+  'skforecast<0.15,>=0.12.1; python_version < "3.13"',
   'skpro>=2,<2.10.0',
-  'statsforecast<2.1.0,>=1.0.0; python_version < '3.13'',
-  'statsmodels>=0.12.1; python_version < '3.13'',
-  'stumpy>=1.5.1; python_version < '3.11'',
-  'tbats>=1.1; python_version < '3.12'',
-  'temporian<0.9.0,>=0.7.0,!=0.8.0; python_version < '3.12' and sys_platform != 'win32' and platform_machine != 'aarch64'' ,
-  'tensorflow<2.20,>=2; python_version < '3.13'',
-  'tsbootstrap<0.2,>=0.1.0; python_version < '3.13'',
-  'tsfresh>=0.17; python_version < '3.12'',
-  'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < '3.11'',
-  'u8darts>=0.29.0,<0.32.0; python_version < '3.13'',
-  'xarray; python_version < '3.13'',
+  'statsforecast<2.1.0,>=1.0.0; python_version < "3.13"',
+  'statsmodels>=0.12.1; python_version < "3.13"',
+  'stumpy>=1.5.1; python_version < "3.11"',
+  'tbats>=1.1; python_version < "3.12"',
+  'temporian<0.9.0,>=0.7.0,!=0.8.0; python_version < "3.12" and sys_platform != "win32" and platform_machine != "aarch64"',
+  'tensorflow<2.20,>=2; python_version < "3.13"',
+  'tsbootstrap<0.2,>=0.1.0; python_version < "3.13"',
+  'tsfresh>=0.17; python_version < "3.12"',
+  'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < "3.11"',
+  'u8darts>=0.29.0,<0.32.0; python_version < "3.13"',
+  'xarray; python_version < "3.13"',
 ]
 
 # single-task dependencies, e.g., forecasting, classification, etc.
@@ -175,67 +175,67 @@ all_extras_pandas2 = [
 # users can install via 'pip install sktime[forecasting,transformations]' etc
 #
 alignment = [
-  'dtaidistance<2.4; python_version < '3.13'',
-  'dtw-python>=1.3,<1.6; python_version < '3.13'',
-  'numba<0.62,>=0.53; python_version < '3.13'',
+  'dtaidistance<2.4; python_version < "3.13"',
+  'dtw-python>=1.3,<1.6; python_version < "3.13"',
+  'numba<0.62,>=0.53; python_version < "3.13"',
 ]
 annotation = [
-  'hmmlearn<0.4,>=0.2.7; python_version < '3.13'',
-  'numba<0.62,>=0.53; python_version < '3.13'',
-  'pyod<1.2,>=0.8; python_version < '3.12'',
+  'hmmlearn<0.4,>=0.2.7; python_version < "3.13"',
+  'numba<0.62,>=0.53; python_version < "3.13"',
+  'pyod<1.2,>=0.8; python_version < "3.12"',
 ]
 classification = [
-  'esig<0.10,>=0.9.7; python_version < '3.11'',
-  'numba<0.62,>=0.53; python_version < '3.13'',
-  'tensorflow<2.20,>=2; python_version < '3.13'',
-  'tsfresh<0.21,>=0.17; python_version < '3.12'',
+  'esig<0.10,>=0.9.7; python_version < "3.11"',
+  'numba<0.62,>=0.53; python_version < "3.13"',
+  'tensorflow<2.20,>=2; python_version < "3.13"',
+  'tsfresh<0.21,>=0.17; python_version < "3.12"',
 ]
 clustering = [
   'networkx<3.5',
-  'numba<0.62,>=0.53; python_version < '3.13'',
-  'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < '3.12'',
-  'ts2vg<1.3; python_version < '3.13'',
+  'numba<0.62,>=0.53; python_version < "3.13"',
+  'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < "3.12"',
+  'ts2vg<1.3; python_version < "3.13"',
 ]
 detection = [
-  'hmmlearn<0.4,>=0.2.7; python_version < '3.13'',
-  'numba<0.62,>=0.53; python_version < '3.13'',
-  'pyod<1.2,>=0.8; python_version < '3.12'',
+  'hmmlearn<0.4,>=0.2.7; python_version < "3.13"',
+  'numba<0.62,>=0.53; python_version < "3.13"',
+  'pyod<1.2,>=0.8; python_version < "3.12"',
 ]
 forecasting = [
-  'arch>=5.6,<7.1; python_version < '3.13'',
-  'autots<0.7,>=0.6.1; python_version < '3.13'',
-  'pmdarima!=1.8.1,<2.1,>=1.8; python_version < '3.12'',
-  'prophet<1.2,>=1.1; python_version < '3.13'',
-  'skforecast<0.15,>=0.12.1; python_version < '3.13'',
+  'arch>=5.6,<7.1; python_version < "3.13"',
+  'autots<0.7,>=0.6.1; python_version < "3.13"',
+  'pmdarima!=1.8.1,<2.1,>=1.8; python_version < "3.12"',
+  'prophet<1.2,>=1.1; python_version < "3.13"',
+  'skforecast<0.15,>=0.12.1; python_version < "3.13"',
   'skpro>=2,<2.10.0',
-  'statsforecast<2.1.0,>=1.0.0; python_version < '3.13'',
-  'statsmodels<0.15,>=0.12.1; python_version < '3.13'',
-  'tbats<1.2,>=1.1; python_version < '3.12'',
+  'statsforecast<2.1.0,>=1.0.0; python_version < "3.13"',
+  'statsmodels<0.15,>=0.12.1; python_version < "3.13"',
+  'tbats<1.2,>=1.1; python_version < "3.12"',
 ]
 networks = [
-  'keras-self-attention<0.52,>=0.51; python_version < '3.13'',
-  'tensorflow<2.20,>=2; python_version < '3.13'',
+  'keras-self-attention<0.52,>=0.51; python_version < "3.13"',
+  'tensorflow<2.20,>=2; python_version < "3.13"',
 ]
 param_est = [
-  'seasonal<0.4,>=0.3.1; python_version < '3.13'',
-  'statsmodels<0.15,>=0.12.1; python_version < '3.13'',
+  'seasonal<0.4,>=0.3.1; python_version < "3.13"',
+  'statsmodels<0.15,>=0.12.1; python_version < "3.13"',
 ]
 regression = [
-  'numba<0.62,>=0.53; python_version < '3.13'',
-  'tensorflow<2.20,>=2; python_version < '3.13'',
+  'numba<0.62,>=0.53; python_version < "3.13"',
+  'tensorflow<2.20,>=2; python_version < "3.13"',
 ]
 transformations = [
-  'esig<0.10,>=0.9.7; python_version < '3.11'',
-  'filterpy<1.5,>=1.4.5; python_version < '3.13'',
-  'holidays>=0.29,<0.59; python_version < '3.13'',
-  'mne>=1.5,<1.9; python_version < '3.13'',
-  'numba<0.62,>=0.53; python_version < '3.13'',
-  'pycatch22>=0.4,<0.4.6; python_version < '3.13'',
+  'esig<0.10,>=0.9.7; python_version < "3.11"',
+  'filterpy<1.5,>=1.4.5; python_version < "3.13"',
+  'holidays>=0.29,<0.59; python_version < "3.13"',
+  'mne>=1.5,<1.9; python_version < "3.13"',
+  'numba<0.62,>=0.53; python_version < "3.13"',
+  'pycatch22>=0.4,<0.4.6; python_version < "3.13"',
   'simdkalman',
-  'statsmodels<0.15,>=0.12.1; python_version < '3.13'',
-  'stumpy<1.13,>=1.5.1; python_version < '3.12'',
-  'temporian<0.9.0,>=0.7.0,!=0.8.0; python_version < '3.12' and sys_platform != 'win32' and platform_machine != 'aarch64'' ,
-  'tsfresh<0.21,>=0.17; python_version < '3.12'',
+  'statsmodels<0.15,>=0.12.1; python_version < "3.13"',
+  'stumpy<1.13,>=1.5.1; python_version < "3.12"',
+  'temporian<0.9.0,>=0.7.0,!=0.8.0; python_version < "3.12" and sys_platform != "win32" and platform_machine != "aarch64"',
+  'tsfresh<0.21,>=0.17; python_version < "3.12"',
 ]
 
 # dev - the developer dependency set, for contributors to sktime
@@ -283,7 +283,7 @@ binder = [
 ]
 cython_extras = [
   'mrseql < 0.0.3',
-  'mrsqm; python_version < '3.11'',
+  'mrsqm; python_version < "3.11"',
   'numba<0.62',
 ]
 datasets = [
@@ -291,19 +291,19 @@ datasets = [
   'requests',
 ]
 dl = [
-  'FrEIA; python_version < '3.12'',
-  'neuralforecast<1.8.0,>=1.6.4; python_version < '3.11'',
-  'peft>=0.10.0,<0.14.0; python_version < '3.12'',
-  'tensorflow<2.20,>=2; python_version < '3.13'',
-  'torch; (sys_platform != 'darwin' or python_version != '3.13')',
-  'transformers[torch]<4.41.0; python_version < '3.12'',
-  'pykan>=0.2.1,<0.2.9; python_version > '3.9.7'',
-  'pytorch-forecasting>=1.0.0,<1.4.0; (sys_platform != 'darwin' or python_version != '3.13')',
-  'lightning>=2.0; python_version < '3.12'',
-  'gluonts>=0.14.3; python_version < '3.12'',
-  'einops>0.7.0; python_version < '3.12'',
-  'huggingface-hub>=0.23.0; python_version < '3.12'',
-  'hydra-core; python_version < '3.13'',
+  'FrEIA; python_version < "3.12"',
+  'neuralforecast<1.8.0,>=1.6.4; python_version < "3.11"',
+  'peft>=0.10.0,<0.14.0; python_version < "3.12"',
+  'tensorflow<2.20,>=2; python_version < "3.13"',
+  'torch; (sys_platform != "darwin" or python_version != "3.13")',
+  'transformers[torch]<4.41.0; python_version < "3.12"',
+  'pykan>=0.2.1,<0.2.9; python_version > "3.9.7"',
+  'pytorch-forecasting>=1.0.0,<1.4.0; (sys_platform != "darwin" or python_version != "3.13")',
+  'lightning>=2.0; python_version < "3.12"',
+  'gluonts>=0.14.3; python_version < "3.12"',
+  'einops>0.7.0; python_version < "3.12"',
+  'huggingface-hub>=0.23.0; python_version < "3.12"',
+  'hydra-core; python_version < "3.13"',
 ]
 mlflow = [
   'mlflow',
@@ -321,7 +321,7 @@ pandas1 = [
   'pandas<2.0.0',
 ]
 compatibility_tests = [
-  'catboost; python_version < '3.13'',
+  'catboost; python_version < "3.13"',
 ]
 
 [project.urls]
