update exclusions for numpydoc

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,3 +40,8 @@ repos:
     rev: v1.7.0
     hooks:
       - id: numpydoc-validation
+      # https://github.com/numpy/numpydoc/issues/497
+        exclude: |
+          (?x)(
+              docs/source
+          )
