--- a/docs/source/Makefile
+++ b/docs/source/Makefile
@@ -24,9 +24,9 @@ clean:
 # make build O="--no-color 2> build_warnings.log"
 html:
 #	./symlink_examples.sh
-	$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O) -j auto >> build.log 2>&1
 
 # $(O) is meant as a shortcut for custom options.
 autobuild:
 #   use --pre-build COMMAND to call ./symlink_examples.sh
-	$(SPHINXAUTOBUILD) "$(SOURCEDIR)" "$(BUILDDIR)/html" -d "$(BUILDDIR)/doctrees" $(SPHINXAUTOOPTS) $(O) --watch "$(SKTIMEDIR)" --re-ignore ".*\.json"
+	$(SPHINXAUTOBUILD) "$(SOURCEDIR)" "$(BUILDDIR)/html" -d "$(BUILDDIR)/doctrees" $(SPHINXAUTOOPTS) $(O) --watch "$(SKTIMEDIR)" --re-ignore ".*\.json" -j auto
