--- a/docs/source/Makefile
+++ b/docs/source/Makefile
@@ -2,9 +2,9 @@
 
 # You can set these variables from the command line.
 SPHINXBUILD        = sphinx-build
-SPHINXOPTS         =
+SPHINXOPTS         = -j auto
 SPHINXAUTOBUILD    = sphinx-autobuild
-SPHINXAUTOOPTS     =
+SPHINXAUTOOPTS     = -j auto
 SOURCEDIR          = .
 BUILDDIR           = ../build
 SKTIMEDIR          = ../../sktime
@@ -24,9 +24,9 @@ clean:
 # make build O="--no-color 2> build_warnings.log"
 html:
 #	./symlink_examples.sh
-	$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O) -j auto
+	$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 # $(O) is meant as a shortcut for custom options.
 autobuild:
 #   use --pre-build COMMAND to call ./symlink_examples.sh
-	$(SPHINXAUTOBUILD) "$(SOURCEDIR)" "$(BUILDDIR)/html" -d "$(BUILDDIR)/doctrees" $(SPHINXAUTOOPTS) $(O) --watch "$(SKTIMEDIR)" --re-ignore ".*\.json" -j auto
+	$(SPHINXAUTOBUILD) "$(SOURCEDIR)" "$(BUILDDIR)/html" -d "$(BUILDDIR)/doctrees" $(SPHINXAUTOOPTS) $(O) --watch "$(SKTIMEDIR)" --re-ignore ".*\.json"
