--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,3 +35,15 @@ repos:
     hooks:
       - id: shellcheck
         name: shellcheck
+
+  - repo: https://github.com/numpy/numpydoc
+    rev: v1.7.0
+    hooks:
+      - id: numpydoc-validation
+      # https://github.com/numpy/numpydoc/issues/497
+        exclude: |
+          (?x)(
+              docs|
+              tests|
+              _.*\.py
+          )
