--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,6 +13,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  commands:
+    - pip install .[docs]
+    - sphinx-build -b html -d _build/doctrees -j auto docs/source $READTHEDOCS_OUTPUT/html
   jobs:
     post_checkout:
     # Cancel building pull requests when there aren't changed in the docs directory or YAML file.
@@ -25,6 +28,6 @@ build:
         exit 183;
       fi
 
-sphinx:
-  configuration: docs/source/conf.py
+# sphinx:
+#   configuration: docs/source/conf.py
 #  fail_on_warning: True
