--- a/pyproject.toml
+++ b/pyproject.toml
@@ -299,6 +299,8 @@ dl = [
   'gluonts>=0.14.3; python_version < "3.12"',
   'einops>0.7.0; python_version < "3.12"',
   'huggingface-hub>=0.23.0; python_version < "3.12"',
+  'accelerate',
+  'tqdm',
   'hydra-core; python_version < "3.13"',
 ]
 mlflow = [
