--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3486,6 +3486,17 @@
       ]
     },
     {
+      "login": "OmBiradar",
+      "name": "Om Biradar",
+      "avatar_url": "https://avatars.githubusercontent.com/OmBiradar",
+      "profile": "https://github.com/OmBiradar",
+      "contributions": [
+        "code",
+        "bug",
+        "doc"
+      ]
+    },
+    {
       "login": "gbilleyPeco",
       "name": "Graham Billey",
       "avatar_url": "https://avatars.githubusercontent.com/u/119866794?v=4",
