--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3258,6 +3258,15 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "",
+      "name": "Martin Tveten",
+      "avatar_url": "https://avatars.githubusercontent.com/u/18215310?v=4",
+      "profile": "https://github.com/Tveten",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
