--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3361,15 +3361,6 @@
       ]
     },
     {
-      "login": "",
-      "name": "Martin Tveten",
-      "avatar_url": "https://avatars.githubusercontent.com/u/18215310?v=4",
-      "profile": "https://github.com/Tveten",
-      "contributions": [
-        "code"
-      ]
-    },
-    {
       "login": "lenaklosik",
       "name": "Lena Klosik",
       "avatar_url": "https://avatars.githubusercontent.com/lenaklosik",
@@ -3515,6 +3506,16 @@
       "bug",
       "doc",
       "ideas"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Martin Tveten",
+      "avatar_url": "https://avatars.githubusercontent.com/u/18215310?v=4",
+      "profile": "https://github.com/Tveten",
+      "contributions": [
+        "code",
+        "design"
       ]
     }
   ]
