[ENH ] skchange homogenization: variable identification + minor fixes (#7509)
#### Reference Issues/PRs
Fixes https://github.com/sktime/sktime/issues/7323. See also
https://github.com/NorskRegnesentral/skchange/pull/44 and
https://github.com/NorskRegnesentral/skchange/pull/49

#### What does this implement/fix? Explain your changes.
- Adds the tag "capability:variable_identification" for detectors.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3507,6 +3507,16 @@
       "doc",
       "ideas"
       ]
+    },
+    {
+      "login": "",
+      "name": "Martin Tveten",
+      "avatar_url": "https://avatars.githubusercontent.com/u/18215310?v=4",
+      "profile": "https://github.com/Tveten",
+      "contributions": [
+        "code",
+        "design"
+      ]
     }
   ]
 }
