--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3516,7 +3516,14 @@
       "contributions": [
         "code",
         "design"
-      ]
+      ],
+      "login": "jobs-git",
+      "name": "James Guana",
+      "avatar_url": "https://avatars.githubusercontent.com/u/13552004?v=4",
+      "profile": "https://github.com/jobs-git",
+      "contributions": [
+        "code"
+      ],
     }
   ]
 }
