Add Aditya Agarwal to contributors list

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3517,6 +3517,15 @@
         "code",
         "design"
       ]
-    }
+    },
+    {
+  "login": "adityagarwal15",
+  "name": "Aditya Agarwal",
+  "avatar_url": "https://avatars.githubusercontent.com/u/153291039?v=4",
+  "profile": "https://github.com/adityagarwal15",
+  "contributions": [
+    "doc"
+  ]
+}
   ]
 }
