edited contributor file

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3509,6 +3509,16 @@
       ]
     },
     {
+      "login": "ADizzyPython",
+      "name": "Rishit Jain",
+      "avatar_url": "https://avatars.githubusercontent.com/u/64909375?v=4",
+      "profile": "https://github.com/ADizzyPython",
+      "contributions": [
+        "code",
+        "bug"
+      ]
+    }
+    {
       "login": "",
       "name": "Martin Tveten",
       "avatar_url": "https://avatars.githubusercontent.com/u/18215310?v=4",
