--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -286,6 +286,9 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         os: [ubuntu-latest, macos-13, windows-latest]
+        exclude:
+          - os: macos-13
+            python-version: "3.13"  # macOS does not support Python 3.13 yet so i added it
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
