[MNT] Add broken links check in CI/CD (#8305)
    #### Reference Issues/PRs
    Fixes #2106

    #### What does this implement/fix? Explain your changes.
    Add link_check workflow to detect any broken links in .md files.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3517,6 +3517,15 @@
         "code",
         "design"
       ]
+    },
+    {
+      "login": "Satoshi-Sh",
+      "name": "Satoshi Shirosaka",
+      "avatar_url":"https://avatars.githubusercontent.com/Satoshi-Sh",
+      "profile":"https://github.com/Satoshi-Sh",
+      "contributions": [
+        "maintenance"
+      ]
     }
   ]
 }
